26. The image paths have been successfully updated to relative URLs. This should work better with Netlify's deployment process. Let's also add a test deployment command to help verify the thumbnail.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <meta property="og:url" content="https://www.koperasikamapa.com/" />
     <meta property="og:title" content="Koperasi Kamapa | Koperasi Kapakat Manggatang Panatau" />
     <meta property="og:description" content="Koperasi Kamapa adalah koperasi yang berkomitmen untuk memberikan pelayanan terbaik kepada anggotanya." />
-    <meta property="og:image" content="https://www.koperasikamapa.com/logo.png" />
+    <meta property="og:image" content="/logo.png" />
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://www.koperasikamapa.com/" />
     <meta property="twitter:title" content="Koperasi Kamapa | Koperasi Kapakat Manggatang Panatau" />
     <meta property="twitter:description" content="Koperasi Kamapa adalah koperasi yang berkomitmen untuk memberikan pelayanan terbaik kepada anggotanya." />
-    <meta property="twitter:image" content="https://www.koperasikamapa.com/logo.png" />
+    <meta property="twitter:image" content="/logo.png" />
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
 </head>
