--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Koperasi Kamapa adalah koperasi yang berkomitmen untuk memberikan pelayanan terbaik kepada anggotanya. Bergabunglah dengan kami untuk mendapatkan manfaat keuangan dan dukungan komunitas." />
+    <link rel="canonical" href="https://www.koperasikamapa.com/" />
     <title>Koperasi Kamapa | Koperasi Kapakat Manggatang Panatau</title>
     
     <!-- Open Graph / Facebook -->
@@ -21,6 +23,21 @@
     <meta property="twitter:image" content="/logo.png" />
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Koperasi Kamapa",
+      "alternateName": "Koperasi Kapakat Manggatang Panatau",
+      "url": "https://www.koperasikamapa.com/",
+      "logo": "https://www.koperasikamapa.com/logo.png",
+      "sameAs": [
+        "https://www.facebook.com/koperasikamapa",
+        "https://www.instagram.com/koperasikamapa"
+      ]
+    }
+    </script>
 </head>
 <body>
     <div id="root"></div>
